--- a/javascript/package.json
+++ b/javascript/package.json
@@ -19,15 +19,15 @@
     "@tsconfig/node16": "1.0.2",
     "@types/google-protobuf": "3.15.6",
     "@types/node": "16.10.3",
+    "google-protobuf": "3.21.2",
     "grpc-tools": "^1.12.4",
     "protoc-gen-ts": "^0.8.6",
     "typescript": "4.9.5"
   },
-  "dependencies": {
-    "google-protobuf": "3.21.2"
-  },
+  "dependencies": {},
   "peerDependencies": {
-    "@grpc/grpc-js": "1.13.1"
+    "@grpc/grpc-js": "1.13.1",
+    "google-protobuf": "3.21.2"
   },
   "files": [
     "dist"
